--- a/src/context/language/python-parser-test.ipynb
+++ b/src/context/language/python-parser-test.ipynb
@@ -6,7 +6,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "from python_parser import PythonParser"
    ]
   },
@@ -35,27 +34,42 @@
       "\n",
       "    return enclosing_context\n",
       "\n",
-      "\n",
       "class PythonParser:\n",
       "    def __init__(self):\n",
       "        self.largest_size = 0\n",
       "        self.largest_enclosing_context = None\n",
+      "        self.start = None\n",
+      "        self.end = None\n",
       "\n",
       "    def process_node(self, node, line_start, line_end):\n",
       "        \"\"\"\n",
       "        Process a node and check if it encloses the specified line range.\n",
       "        \"\"\"\n",
       "        # Check if the node has location attributes\n",
+      "        print(line_start, line_end)\n",
       "\n",
       "        start_line = node.lineno\n",
       "        end_line = getattr(node, \"end_lineno\", start_line)\n",
+      "        print(start_line, end_line)\n",
+      "        print(self.start, self.end)\n",
+      "        print(\"\\n\")\n",
       "\n",
-      "        # Check if the node's range encloses the target range\n",
-      "        if start_line <= line_start and line_end <= end_line:\n",
-      "            size = end_line - start_line\n",
-      "            if size > self.largest_size:\n",
-      "                self.largest_size = size\n",
-      "                self.largest_enclosing_context = node\n",
+      "        # find first occurence of a node within boundary\n",
+      "        if not self.start and start_line <= line_start and end_line >= line_start:\n",
+      "            self.start = start_line\n",
+      "        \n",
+      "        # find maximum enclosing context\n",
+      "        if self.start and start_line <= line_end:\n",
+      "            if end_line - self.start > self.largest_size:\n",
+      "                self.end = end_line\n",
+      "                self.largest_size = end_line-self.start\n",
+      "\n",
+      "        # if start_line <= line_start and line_end <= end_line:\n",
+      "        #     size = end_line - start_line\n",
+      "        #     if size > self.largest_size:\n",
+      "        #         self.largest_size = size\n",
+      "        #         self.start = start_line\n",
+      "        #         self.end = end_line\n",
       "\n",
       "    def find_enclosing_context(self, file_content, line_start, line_end):\n",
       "        \"\"\"\n",
@@ -70,8 +84,11 @@
       "                self.process_node(node, line_start, line_end)\n",
       "\n",
       "        # Return the largest enclosing context as a dictionary for simplicity\n",
-      "        if self.largest_enclosing_context:\n",
-      "            return node_to_enclosing_context(self.largest_enclosing_context)\n",
+      "        if self.start and self.end:\n",
+      "            return {\n",
+      "                \"line_start\": self.start,\n",
+      "                \"line_end\": self.end\n",
+      "            }\n",
       "        else:\n",
       "            return None\n",
       "\n",
@@ -93,15 +110,11 @@
       "\n",
       "        if job == \"dry_run\":\n",
       "            output = parser.dry_run(file_content)\n",
-      "            if not output:\n",
-      "                print(\"FAIL\")\n",
       "            print(json.dumps(output))\n",
       "        elif job == \"enclosing_context\":\n",
       "            line_start = int(sys.argv[3])\n",
       "            line_end = int(sys.argv[4])\n",
       "            output = parser.find_enclosing_context(file_content, line_start, line_end)\n",
-      "            if not output:\n",
-      "                print(\"FAIL\")\n",
       "            print(json.dumps(output))\n",
       "        else:\n",
       "            print(json.dumps({\"Unknown job\"}))\n",
@@ -119,6 +132,7 @@
    "source": [
     "parser = PythonParser()\n",
     "\n",
+    "# file_path = r\"C:\\Users\\aaesp\\Projects\\Fellowship\\BrainTumorClassification\\StreamlitApp\\utils\\models.py\"\n",
     "file_path = \"python_parser.py\"\n",
     "with open(file_path, \"r\") as f:\n",
     "    fileContents = f.read()\n",
@@ -132,9 +146,45 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8 23\n",
+      "5 15\n",
+      "None None\n",
+      "\n",
+      "\n",
+      "8 23\n",
+      "17 83\n",
+      "5 15\n",
+      "\n",
+      "\n",
+      "8 23\n",
+      "18 22\n",
+      "5 83\n",
+      "\n",
+      "\n",
+      "8 23\n",
+      "24 45\n",
+      "5 83\n",
+      "\n",
+      "\n",
+      "8 23\n",
+      "54 73\n",
+      "5 83\n",
+      "\n",
+      "\n",
+      "8 23\n",
+      "75 83\n",
+      "5 83\n",
+      "\n",
+      "\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "{'line_start': 18, 'line_end': 65}"
+       "{'line_start': 5, 'line_end': 83}"
       ]
      },
      "execution_count": 3,
@@ -143,27 +193,7 @@
     }
    ],
    "source": [
-    "parser.find_enclosing_context(fileContents, 41, 58)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'line_start': 18, 'line_end': 67}"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "parser.find_enclosing_context(fileContents, 41, 58)"
+    "parser.find_enclosing_context(fileContents, 8, 23)"
    ]
   },
   {
